--- a/scss/blocks/_contacts.scss
+++ b/scss/blocks/_contacts.scss
@@ -5,6 +5,13 @@
         margin-top: 72px;
     }
 
+
+    @media only screen and (max-width:$tablet-width) {
+        &__container {
+            flex-direction: column;
+        }
+    }
+
     &__info {
         display: flex;
         flex-direction: column;
